--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 module.exports = {
-    authSecret: 'uyq87)&N09m-UNIUN(UHBNIrfvr',
+    authSecret: 'p897ynvg*BT*&¨Gb@$%üitgb871',
     db: {
         host : '127.0.0.1',
         port: 5432,
