--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 module.exports = {
-    authSecret: 'p897ynvg*BT*&¨Gb@$%üitgb871',
+    authSecret: 'uybiu&¨GBni87gBÏ(&&',
     db: {
         host : '127.0.0.1',
         port: 5432,
