--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "liquor-tree": "0.2.32",
     "vue": "2.5.17",
     "vue-gravatar": "1.2.1",
+    "vue-masked-input": "^0.5.2",
     "vue-mq": "0.2.1",
+    "vue-phone-number-input": "^1.1.7",
     "vue-router": "3.0.1",
     "vue-toasted": "1.1.24",
     "vue2-editor": "2.6.6",
